--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Feross Aboukhadijeh <feross@feross.org>",
   "dependencies": {},
   "devDependencies": {
-    "standard": "^11.0.0"
+    "standard": "*"
   },
   "keywords": [
     "beep",
