--- a/package.json
+++ b/package.json
@@ -2,24 +2,36 @@
   "name": "beepbeep",
   "description": "Make a console beep noise in Node.js",
   "version": "1.2.2",
-  "author": "Feross Aboukhadijeh <feross@feross.org>",
-  "main": "index.js",
+  "author": {
+    "name": "Feross Aboukhadijeh",
+    "email": "feross@feross.org",
+    "url": "https://feross.org"
+  },
   "bin": {
-    "beepbeep": "cli.js"
+    "beepbeep": "./bin/cmd.js"
+  },
+  "bugs": {
+    "url": "https://github.com/feross/beepbeep/issues"
   },
   "dependencies": {},
   "devDependencies": {
     "standard": "*"
   },
+  "homepage": "https://github.com/feross/beepbeep#readme",
   "keywords": [
     "beep",
-    "console beep",
     "beep beep",
+    "console beep",
     "ding",
-    "ping",
-    "fun"
+    "fun",
+    "ping"
   ],
-  "repository": "git://github.com/feross/beepbeep",
+  "license": "MIT",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/feross/beepbeep.git"
+  },
   "scripts": {
     "test": "standard"
   }
